Add initial notebooks with cuda

--- a/tutorials/detailed_model_reference.ipynb
+++ b/tutorials/detailed_model_reference.ipynb
@@ -55,8 +55,8 @@
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-01T09:18:26.872334Z",
-     "start_time": "2024-07-01T09:18:26.869500Z"
+     "end_time": "2024-07-12T12:16:14.987081Z",
+     "start_time": "2024-07-12T12:16:12.956332Z"
     }
    },
    "source": [
@@ -76,7 +76,7 @@
     "from torch_cluster import fps, knn"
    ],
    "outputs": [],
-   "execution_count": 13
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -91,8 +91,8 @@
    "id": "7264db0cc4bfa961",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-01T09:18:26.925259Z",
-     "start_time": "2024-07-01T09:18:26.922672Z"
+     "end_time": "2024-07-12T12:16:21.520667Z",
+     "start_time": "2024-07-12T12:16:21.517557Z"
     }
    },
    "source": [
@@ -102,7 +102,7 @@
     "scalar_feature = torch.rand(n)"
    ],
    "outputs": [],
-   "execution_count": 14
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -121,8 +121,8 @@
    "id": "ac963dbde04fc5c5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-01T09:18:26.931778Z",
-     "start_time": "2024-07-01T09:18:26.926656Z"
+     "end_time": "2024-07-12T12:16:30.609211Z",
+     "start_time": "2024-07-12T12:16:30.604307Z"
     }
    },
    "source": [
@@ -165,24 +165,23 @@
     "        return f\"{self.__class__.__name__}(rel_sampling_ratios={self.rel_sampling_ratios}, interp_simplex={self.interp_simplex})\""
    ],
    "outputs": [],
-   "execution_count": 15
+   "execution_count": 3
   },
   {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": "",
-   "id": "8b415d91655e9c83"
-  },
-  {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-12T12:16:39.630319Z",
+     "start_time": "2024-07-12T12:16:39.616800Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "transform = PointCloudPoolingScales(rel_sampling_ratios=(0.2,), interp_simplex='triangle')\n",
     "dummy_data = transform(pyg.data.Data(pos=pos, orientation=orientation, scalar_feature=scalar_feature))"
    ],
-   "id": "54400f8d7cb85dd8"
+   "id": "54400f8d7cb85dd8",
+   "outputs": [],
+   "execution_count": 4
   },
   {
    "metadata": {},
@@ -205,8 +204,8 @@
    "id": "375b5f1d6f0c856b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-01T09:18:26.949093Z",
-     "start_time": "2024-07-01T09:18:26.945733Z"
+     "end_time": "2024-07-12T12:16:43.452480Z",
+     "start_time": "2024-07-12T12:16:43.449203Z"
     }
    },
    "source": [
@@ -228,7 +227,7 @@
     "        return extract_translation(multivectors).squeeze()\n"
    ],
    "outputs": [],
-   "execution_count": 17
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
@@ -242,8 +241,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-01T09:18:26.954579Z",
-     "start_time": "2024-07-01T09:18:26.950209Z"
+     "end_time": "2024-07-12T12:16:44.050245Z",
+     "start_time": "2024-07-12T12:16:44.045916Z"
     }
    },
    "cell_type": "code",
@@ -287,7 +286,7 @@
    ],
    "id": "692225270547a492",
    "outputs": [],
-   "execution_count": 18
+   "execution_count": 6
   },
   {
    "metadata": {},
@@ -298,8 +297,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-01T09:18:26.959591Z",
-     "start_time": "2024-07-01T09:18:26.955915Z"
+     "end_time": "2024-07-12T12:16:45.007227Z",
+     "start_time": "2024-07-12T12:16:45.000335Z"
     }
    },
    "cell_type": "code",
@@ -330,7 +329,7 @@
    ],
    "id": "dc8b7295bcc0eebb",
    "outputs": [],
-   "execution_count": 19
+   "execution_count": 7
   },
   {
    "metadata": {},
@@ -341,8 +340,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-01T09:18:26.985563Z",
-     "start_time": "2024-07-01T09:18:26.973937Z"
+     "end_time": "2024-07-12T12:16:45.832446Z",
+     "start_time": "2024-07-12T12:16:45.823947Z"
     }
    },
    "cell_type": "code",
@@ -470,7 +469,7 @@
    ],
    "id": "c2083f9c4b8a1833",
    "outputs": [],
-   "execution_count": 20
+   "execution_count": 8
   },
   {
    "metadata": {},
@@ -487,8 +486,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-01T09:18:26.993182Z",
-     "start_time": "2024-07-01T09:18:26.987283Z"
+     "end_time": "2024-07-12T12:16:46.941732Z",
+     "start_time": "2024-07-12T12:16:46.936169Z"
     }
    },
    "cell_type": "code",
@@ -561,7 +560,7 @@
    ],
    "id": "65517f52821b5ea4",
    "outputs": [],
-   "execution_count": 21
+   "execution_count": 9
   },
   {
    "metadata": {},
@@ -572,23 +571,31 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-01T09:18:27.087550Z",
-     "start_time": "2024-07-01T09:18:26.994939Z"
+     "end_time": "2024-07-12T12:17:48.838577Z",
+     "start_time": "2024-07-12T12:17:48.715617Z"
     }
    },
    "cell_type": "code",
-   "source": "model = LaBGATr(GeometricAlgebraInterface, d_model=8, num_blocks=10, num_attn_heads=4, use_class_token=False)",
+   "source": [
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "\n",
+    "print(f\"Running test on {device}!\")\n",
+    "\n",
+    "model = LaBGATr(GeometricAlgebraInterface, d_model=8, num_blocks=10, num_attn_heads=4, use_class_token=False).to(device)\n",
+    "\n"
+   ],
    "id": "63280835758baa8f",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Running test on cuda\n",
       "LaB-GATr (317180 parameters)\n"
      ]
     }
    ],
-   "execution_count": 22
+   "execution_count": 13
   },
   {
    "cell_type": "markdown",
@@ -603,12 +610,13 @@
    "id": "4dfd82278687c9c4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-01T09:18:27.222515Z",
-     "start_time": "2024-07-01T09:18:27.088349Z"
+     "end_time": "2024-07-12T12:17:14.776257Z",
+     "start_time": "2024-07-12T12:17:14.201133Z"
     }
    },
    "source": [
-    "output = model(dummy_data)\n",
+    "output = model(dummy_data.to(device))\n",
+    "\n",
     "print(output.shape)"
    ],
    "outputs": [
@@ -620,7 +628,15 @@
      ]
     }
    ],
-   "execution_count": 23
+   "execution_count": 11
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "bc325a88a1417aa7"
   }
  ],
  "metadata": {
