Add gram notebook

--- a/tutorials/GRaM_lab_gatr.ipynb
+++ b/tutorials/GRaM_lab_gatr.ipynb
@@ -1,21 +1,30 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "e446da2d668c2e07",
    "metadata": {},
-   "source": "# LaB-GATr Detailed Model Reference"
+   "cell_type": "markdown",
+   "source": "# LaB-GATr Detailed Model Reference And Usage Tutorial",
+   "id": "530ad1465e98e2a2"
   },
   {
-   "cell_type": "markdown",
-   "id": "f76af12cabee4c7e",
    "metadata": {},
+   "cell_type": "markdown",
    "source": [
-    "## 0. Installation\n",
+    "## Installation\n",
     "\n",
     "In this notebook we explain the inner blocks of LaB-GATr.\n",
     "\n",
     "Before using this notebook, install the correct dependencies and LaB-GATr as follows:\n",
+    "\n",
+    "Clone the repo by using\n",
+    "```\n",
+    "git clone git@github.com:sukjulian/lab-gatr.git\n",
+    "```\n",
+    "\n",
+    "Change the directory into the repository\n",
+    "```\n",
+    "cd lab-gatr\n",
+    "```\n",
     "\n",
     "Optional new Anaconda environment\n",
     "```\n",
@@ -29,7 +38,7 @@
     "pip install torch_geometric==2.4.0\n",
     "pip install torch_scatter torch_cluster -f https://data.pyg.org/whl/torch-2.1.0+cu121.html\n",
     "```\n",
-    "Install LaB-GATr itself, which also install GATr\n",
+    "Install LaB-GATr itself, which also installs GATr\n",
     "```\n",
     "pip install .\n",
     "```\n",
@@ -37,20 +46,34 @@
     "```\n",
     "pip install jupyter jupyterlab\n",
     "```"
-   ]
+   ],
+   "id": "1672d1f3e0fe894"
   },
   {
+   "metadata": {},
    "cell_type": "markdown",
-   "id": "c9e38155c4ab6cc4",
-   "metadata": {},
    "source": [
-    "## 1. Infrastructure"
-   ]
+    "# Introduction\n",
+    "\n",
+    "In this tutorial we gradually introduce the building blocks of [LaB-GATr](https://arxiv.org/abs/2403.07536) which is built on top of [GATr](https://www.semanticscholar.org/paper/Geometric-Algebra-Transformer-Brehmer-Haan/4689f6603587e64e87ae36a385e9aab34af2966a). We will introduce the tokenization and the interpolation steps also discussed in our paper and show how to process dummy input with our model from scratch."
+   ],
+   "id": "c9589d095b2e07ea"
   },
   {
-   "cell_type": "code",
-   "id": "initial_id",
    "metadata": {},
+   "cell_type": "markdown",
+   "source": "# Method",
+   "id": "b5b3d1f720b37b0c"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## 1. Infrastructure",
+   "id": "ff9096e82515eea3"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
    "source": [
     "from gatr.interface import embed_oriented_plane, extract_translation\n",
     "import torch\n",
@@ -67,46 +90,48 @@
     "from lab_gatr.data import Data\n",
     "from torch_cluster import fps, knn"
    ],
+   "id": "5f6cd32689f9f20b",
    "outputs": [],
    "execution_count": null
   },
   {
-   "cell_type": "markdown",
-   "id": "89de2d017dd9efa3",
    "metadata": {},
-   "source": [
-    "Let us first create a dummy mesh: n positions and orientations (e.g. surface normal) and an arbitrary scalar feature (e.g. geodesic distance)."
-   ]
+   "cell_type": "markdown",
+   "source": "Let us first create a dummy mesh: n positions and orientations (e.g. surface normal) and an arbitrary scalar feature (e.g. geodesic distance).",
+   "id": "fb81be0d48f2dc6d"
   },
   {
-   "cell_type": "code",
-   "id": "7264db0cc4bfa961",
    "metadata": {},
+   "cell_type": "code",
    "source": [
     "n = 1000\n",
     "\n",
     "pos, orientation = torch.rand((n, 3)), torch.rand((n, 3))\n",
     "scalar_feature = torch.rand(n)"
    ],
+   "id": "62fab7f0762fa0fc",
    "outputs": [],
    "execution_count": null
   },
   {
-   "cell_type": "markdown",
-   "id": "cb6a1fa784bd6801",
    "metadata": {},
+   "cell_type": "markdown",
    "source": [
     "Next, a point cloud pooling transform for the tokenisation (patching).\n",
     "\n",
-    "Nested hierarchy of sub-sampled point clouds. Each coarse-scale point is mapped to a cluster of fine-scale points. Barycentric interpolation from the coarse to the fine scales. For correct batching, ```torch_geometric.data.Data.__inc__()``` has to be overridden.\n",
+    "Nested hierarchy of sub-sampled point clouds. Each coarse-scale point is mapped to a cluster of fine-scale points. Interpolation from the coarse to the fine scales. For correct batching, ```torch_geometric.data.Data.__inc__()``` has to be overridden.\n",
     "\n",
-    "```TODO```"
-   ]
+    "The point cloud pooling transform used by LaB-GATr pre-computes information required for coarsening and refinement of the input mesh.\n",
+    "\n",
+    "For coarsening, we construct a [Voronoi](https://en.wikipedia.org/wiki/Voronoi_diagram)-type diagram. We first sample a fraction of the mesh vertices $ \\mathcal{P} $, approximately equidistantly, via farthest point sampling. Then we create the Voronoi clusters by querying, for each original mesh vertex, the nearest point in the sub-sampled set $ \\mathcal{P} $ via k-nearest neighbours ( $ k = 1 $ ).\n",
+    "\n",
+    "For interpolation, we simply query for each original mesh vertex the closest $ k $ points in the sub-sampled set $ \\mathcal{P} $. For surface meshes, we choose $ k = 3 $ which corresponds to a triangular reference simplex, while for volume meshes we choose a tetrahedron ( $ k = 4 $ ).\n"
+   ],
+   "id": "6ce86e22f4b5a9ec"
   },
   {
-   "cell_type": "code",
-   "id": "ac963dbde04fc5c5",
    "metadata": {},
+   "cell_type": "code",
    "source": [
     "class PointCloudPoolingScales():\n",
     "    \"\"\"\n",
@@ -146,6 +171,7 @@
     "    def __repr__(self) -> str:\n",
     "        return f\"{self.__class__.__name__}(rel_sampling_ratios={self.rel_sampling_ratios}, interp_simplex={self.interp_simplex})\""
    ],
+   "id": "f3ce6bac0700dde0",
    "outputs": [],
    "execution_count": null
   },
@@ -156,7 +182,7 @@
     "transform = PointCloudPoolingScales(rel_sampling_ratios=(0.2,), interp_simplex='triangle')\n",
     "dummy_data = transform(pyg.data.Data(pos=pos, orientation=orientation, scalar_feature=scalar_feature))"
    ],
-   "id": "54400f8d7cb85dd8",
+   "id": "b55d9b5347b6865d",
    "outputs": [],
    "execution_count": null
   },
@@ -164,22 +190,17 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": "## 2. Building the Model",
-   "id": "15893f75d230b52e"
+   "id": "7abe7e5851297f92"
   },
   {
+   "metadata": {},
    "cell_type": "markdown",
-   "id": "546e0c748430850a",
-   "metadata": {},
-   "source": [
-    "A geometric algebra interface to embed your data in $\\mathbf{G}(3, 0, 1)$.\n",
-    "\n",
-    "```TODO```"
-   ]
+   "source": "A geometric algebra interface to embed your data in $\\mathbf{G}(3, 0, 1)$.",
+   "id": "49f2572dcac22b1a"
   },
   {
-   "cell_type": "code",
-   "id": "375b5f1d6f0c856b",
    "metadata": {},
+   "cell_type": "code",
    "source": [
     "class GeometricAlgebraInterface:\n",
     "    num_input_channels = num_output_channels = 1\n",
@@ -196,19 +217,21 @@
     "\n",
     "    @staticmethod\n",
     "    def dislodge(multivectors, scalars):\n",
-    "        return extract_translation(multivectors).squeeze()\n"
+    "        return extract_translation(multivectors).squeeze()"
    ],
+   "id": "a60f07bad04535db",
    "outputs": [],
    "execution_count": null
   },
   {
-   "cell_type": "markdown",
-   "id": "c832f5754fbd5911",
    "metadata": {},
+   "cell_type": "markdown",
    "source": [
     "### 2.1 Tokenizer\n",
-    "```TODO```"
-   ]
+    "\n",
+    "The interpolation layer performs a convex combination of multivectors which is compatible with the projective geometric algebra."
+   ],
+   "id": "2036042a55a7b379"
   },
   {
    "metadata": {},
@@ -251,15 +274,15 @@
     "\n",
     "    return mlp(multivectors, scalars, reference_mv=reference_multivector)"
    ],
-   "id": "692225270547a492",
+   "id": "ce82a1df96835bd0",
    "outputs": [],
    "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "```TODO```",
-   "id": "86c7c79f3c53ead6"
+   "source": "The pooling layer is implemented via PyG message passing. We just have to embed the relative position between points as multivector.",
+   "id": "55c6cb4111734917"
   },
   {
    "metadata": {},
@@ -289,15 +312,15 @@
     "\n",
     "        return multivectors, scalars"
    ],
-   "id": "dc8b7295bcc0eebb",
+   "id": "92927b99c514cad3",
    "outputs": [],
    "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "```TODO```",
-   "id": "c87478bffc122b63"
+   "source": "The complete tokenization module now just wraps pooling and interpolation. For reflection equivariance, we have to keep track of a reference multivector. Furthermore, we support extracting a global class token for classification tasks. This is a lot more efficient than taking the global average of vertex-wise outputs.",
+   "id": "ecc84a1da48281e7"
   },
   {
    "metadata": {},
@@ -424,7 +447,7 @@
     "        return mlp(multivectors, scalars, reference_mv=reference_multivector)\n",
     "\n"
    ],
-   "id": "c2083f9c4b8a1833",
+   "id": "3a333dcb393112e6",
    "outputs": [],
    "execution_count": null
   },
@@ -432,13 +455,13 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": "### 2.2 LaB-GATr",
-   "id": "d8a241a8fdd731e6"
+   "id": "7e5a71a32ba1fcb9"
   },
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "```TODO```",
-   "id": "ff4c4923dd10a3d6"
+   "source": "Now we can assemble the complete LaB-GATr model. It is comprised of tokenization and a GATr backend. For correct handling of PyG-style batching, we use block-diagonal attention masks. Another highlight is the class token support which we implement via a ```class_token_forward_wrapper```.",
+   "id": "c6802731fce0ef60"
   },
   {
    "metadata": {},
@@ -510,7 +533,7 @@
     "\n",
     "        return attn_mask"
    ],
-   "id": "65517f52821b5ea4",
+   "id": "c9f7b149dd1d85f",
    "outputs": [],
    "execution_count": null
   },
@@ -518,7 +541,7 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": "## 3. Usage",
-   "id": "34fe726c4051ee23"
+   "id": "33520970d4afc701"
   },
   {
    "metadata": {},
@@ -528,59 +551,48 @@
     "\n",
     "print(f\"Running test on {device}!\")\n",
     "\n",
-    "model = LaBGATr(GeometricAlgebraInterface, d_model=8, num_blocks=10, num_attn_heads=4, use_class_token=False).to(device)\n",
-    "\n"
+    "model = LaBGATr(GeometricAlgebraInterface, d_model=8, num_blocks=10, num_attn_heads=4, use_class_token=False).to(device)"
    ],
-   "id": "63280835758baa8f",
+   "id": "218c6f4f2be5fd89",
    "outputs": [],
    "execution_count": null
   },
   {
-   "cell_type": "markdown",
-   "id": "38764051e0c48259",
    "metadata": {},
-   "source": [
-    "Generate some output with the dummy data to verify that the model functions. Training or inference from here on is the same as any PyTorch model."
-   ]
+   "cell_type": "markdown",
+   "source": "Generate some output with the dummy data to verify that the model functions. Training or inference from here on is the same as any PyTorch model.\n",
+   "id": "854cf313b105b230"
   },
   {
-   "cell_type": "code",
-   "id": "4dfd82278687c9c4",
    "metadata": {},
+   "cell_type": "code",
    "source": [
     "output = model(dummy_data.to(device))\n",
     "\n",
     "print(output.shape)"
    ],
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": "",
-   "id": "bc325a88a1417aa7",
+   "id": "9d023f910c1cccdc",
    "outputs": [],
    "execution_count": null
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.6"
   }
  },
  "nbformat": 4,
