Add gram notebook with added comment

--- a/tutorials/GRaM_lab_gatr.ipynb
+++ b/tutorials/GRaM_lab_gatr.ipynb
@@ -195,7 +195,15 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "A geometric algebra interface to embed your data in $\\mathbf{G}(3, 0, 1)$.",
+   "source": [
+    "A geometric algebra interface to embed your data in $\\mathbf{G}(3, 0, 1)$.\n",
+    "\n",
+    "\n",
+    "\n",
+    "Simply giving input and output channels is not enough when working with geometric algebra. Instead, we must define how our data is going to be represented by multivectors (and auxiliary scalars). For convenience, we package this in a `GeometricAlgebraInterface`. Here, we embed the mesh surface normal as planes at each vertex and pass an addtional scalar feature.\n",
+    "\n",
+    "At the model output, we \"translate\" the multivectors back into Euclidean vectors by interpreting them as translation (pun intended). There are multiple modelling choices for how to perform this extraction (see [paper](https://arxiv.org/abs/2403.07536)).\n"
+   ],
    "id": "49f2572dcac22b1a"
   },
   {
